concord_macros/tests/trybuild/fail/sema/policy/retry_status_invalid.stderr
error: retry DSL was removed; configure client-level `RetryMode` when constructing the client
 --> tests/trybuild/fail/sema/policy/retry_status_invalid.rs:8:9
  |
8 |         retry read {
  |         ^^^^^

warning: unused import: `concord_core::prelude::*`
 --> tests/trybuild/fail/sema/policy/retry_status_invalid.rs:1:5
  |
1 | use concord_core::prelude::*;
  |     ^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default
